<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/healthy_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/green_light2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/t_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/manfaat_selada"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="185dp"
        android:layout_height="8dp"
        android:background="@color/green_light2"
        app:layout_constraintStart_toStartOf="@+id/t_desc"
        app:layout_constraintTop_toBottomOf="@+id/t_desc" />

    <TextView
        android:id="@+id/tv_num_benefit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:background="@color/green_light2"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView" />


    <TextView
        android:id="@+id/benefit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/benefits"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num_benefit" />

    <TextView
        android:id="@+id/tv_num_benefit2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:background="@color/green_light2"
        android:gravity="center"
        android:text="2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/benefit1" />


    <TextView
        android:id="@+id/benefit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/benefits2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num_benefit2" />


    <TextView
        android:id="@+id/tv_num_benefit3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:background="@color/green_light2"
        android:gravity="center"
        android:text="3"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/benefit2" />


    <TextView
        android:id="@+id/benefit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/benefits3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num_benefit3" />


    <TextView
        android:id="@+id/tv_num_benefit4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:background="@color/green_light2"
        android:text="4"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/benefit3" />


    <TextView
        android:id="@+id/benefit4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/benefits4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num_benefit4" />


    <TextView
        android:id="@+id/pengendalian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tips_merawat_selada"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@+id/benefit4" />

    <View
        android:id="@+id/myRectangleView2"
        android:layout_width="230dp"
        android:layout_height="8dp"
        android:background="@color/green_light2"
        app:layout_constraintStart_toStartOf="@+id/pengendalian"
        app:layout_constraintTop_toBottomOf="@+id/pengendalian" />


    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:background="@color/green_light2"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/black"
        app:layout_constraintRight_toLeftOf="@+id/pengendalian1"
        app:layout_constraintStart_toStartOf="@+id/myRectangleView2"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView2" />


    <TextView
        android:id="@+id/pengendalian1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/healthy1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num1" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:background="@color/green_light2"
        android:gravity="center"
        android:text="2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_num1"
        app:layout_constraintTop_toBottomOf="@+id/pengendalian1" />

    <TextView
        android:id="@+id/pengendalian2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/healthy2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num2" />

    <TextView
        android:id="@+id/tv_num3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:background="@color/green_light2"
        android:gravity="center"
        android:text="3"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_num2"
        app:layout_constraintTop_toBottomOf="@+id/pengendalian2" />

    <TextView
        android:id="@+id/pengendalian3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/healthy3"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num3" />

    <TextView
        android:id="@+id/tv_num4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:background="@color/green_light2"
        android:gravity="center"
        android:text="4"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_num2"
        app:layout_constraintTop_toBottomOf="@+id/pengendalian3" />

    <TextView
        android:id="@+id/pengendalian4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:text="@string/healthy4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_num4" />

</androidx.constraintlayout.widget.ConstraintLayout>