<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp"
            android:background="@color/green_light">

            <ImageView
                android:id="@+id/img_sample"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image_plant"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:src="@drawable/sample" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/img_sample"
                app:layout_constraintBottom_toBottomOf="parent" />


            <TextView

                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_marginStart="12dp"
                android:text="@string/nama_tanaman"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_sample"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.354" />

            <Button
                android:id="@+id/btnDelete"
                style="?attr/materialIconButtonFilledTonalStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete"
                app:icon="@drawable/baseline_delete_24"
                app:iconTint="@android:color/black"
                app:layout_constraintBottom_toTopOf="@id/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/line"
                app:layout_constraintVertical_bias="0.225" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/line"
                android:layout_width="163dp"
                android:layout_height="6dp"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toStartOf="@+id/btnDelete"
                app:layout_constraintHorizontal_bias="0.361"
                app:layout_constraintStart_toEndOf="@+id/img_sample"
                app:layout_constraintTop_toBottomOf="@+id/tvname"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
