<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="40dp"
    tools:context=".view.fragment.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/IdentifyDisease"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_light"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/baseline_camera_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/identify_disease"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/img_disease" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/DiagnoseFromGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/green_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IdentifyDisease">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/pic_diagnose" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/diagnose_from_gallery"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/img_diagnose" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/LastDiagnoseHeader"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DiagnoseFromGallery"
        app:layout_constraintEnd_toStartOf="@+id/Article">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/last_diagnose"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_article_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Article"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LastDiagnoseHeader"
        app:layout_constraintTop_toBottomOf="@+id/DiagnoseFromGallery">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="More Article"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_newspaper_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastDiagnoseHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_disease_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="10dp"
                android:text="Disease Lettuce"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_disease_subheader"
                android:layout_width="269dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="Macam-macam penyakit pada Selada"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_disease_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_diseases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="10dp"
                android:splitMotionEvents="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_disease_subheader"
                tools:listitem="@layout/item_disease" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

